# fastapi-react-template-project

./: .env.dev  .gitignore  README.md  docker-compose.yaml
services/jsapp/: Dockerfile  Dockerfile.prod  nginx.conf  package.json
services/jsapp/public/: index.html
services/jsapp/src/: App.css  App.js  index.js  layout.js  login.css  login.js
services/jsapp/src/apis/: api.js  serviceAccount.js
services/jsapp/src/components/: Dashboard.js  DefaultLayoutContent.js  DefaultLayoutFooter.js  DefaultLayoutHeader.js  DefaultLayoutSider.js  debounceSelect.js  responseSlice.js  sericeAccounts.js  store.js  tasks.js
services/jsapp/src/components/serviceaccount/: addOrUpdateServiceAccount.js
services/web/: Dockerfile  entrypoint.prod.sh  main.py  pyproject.toml
services/web/account_monitor_service/: router.py  service.py  tasks.py  utils.py
services/web/auth/: exceptions.py  model.py  provider.py  schemes.py  service.py  util.py
services/web/project/: __init__.py  cache.py  celery_app.py  common_response.py  config.py  database.py  logger.py  middleware.py  tasks.py
services/web/service_account_service/: models.py  router.py  service.py
services/web/user_service/: models.py  router.py
services/web/utils/: emails.py
